--- a/src/app/pages/singupadmin/singupadmin.page.html
+++ b/src/app/pages/singupadmin/singupadmin.page.html
@@ -8,7 +8,7 @@
   <ion-card>
   <ion-item>
     <ion-label position="floating">First Name</ion-label>
-    <ion-input></ion-input>
+    <ion-input ngModel type="text" ></ion-input>
   </ion-item>
   <ion-item>
     <ion-label position="floating">Last Name</ion-label>
