--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,5 +1,8 @@
 <ion-header>
   <ion-toolbar color = 'warning'>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
     <ion-title>home</ion-title>
     <a href="/login">Login</a>
     <a href="/signup">Sign up</a>
