--- a/src/app/pages/order2/order2.page.html
+++ b/src/app/pages/order2/order2.page.html
@@ -1,6 +1,9 @@
 
   <ion-header>
     <ion-toolbar color="primary">
+      <ion-buttons slot="start">
+        <ion-menu-button></ion-menu-button>
+      </ion-buttons>
       <ion-title>Order</ion-title>
     </ion-toolbar>
     <script type="module" src="https://cdn.jsdelivr.net/npm/@ionic/core/dist/ionic/ionic.esm.js"></script>
