--- a/src/app/pages/singupadmin/singupadmin.page.html
+++ b/src/app/pages/singupadmin/singupadmin.page.html
@@ -1,5 +1,8 @@
 <ion-header>
   <ion-toolbar color = 'warning'>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
     <ion-title>Vendor</ion-title>
   </ion-toolbar>
 </ion-header>
