--- a/src/app/pages/menu/menu.page.html
+++ b/src/app/pages/menu/menu.page.html
@@ -1,18 +1,13 @@
-<ion-menu contentId="main">
-<ion-header>
-  <ion-toolbar color="warning">
-    <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
-    </ion-buttons>
-    <ion-title>Main</ion-title>
-  </ion-toolbar>
-</ion-header>
-<ion-content>
-  <div *ngFor = "let p of pages">
-    <ion-menu-toggle *ngIf="p.url">
-      
-    </ion-menu-toggle>
-  </div>
-</ion-content>
-</ion-menu>
-<ion-router-outlet id="main" main></ion-router-outlet>
+<ion-split-pane>
+  <ion-menu contentId = "content">
+   <ion-header>
+     <ion-toolbar>
+       <ion-title>Menu</ion-title>
+     </ion-toolbar>
+   </ion-header>
+
+
+  </ion-menu>
+
+  <ion-router-outlet id="content" main></ion-router-outlet>
+</ion-split-pane>
