--- a/src/app/pages/menu/menu.page.html
+++ b/src/app/pages/menu/menu.page.html
@@ -5,7 +5,13 @@
        <ion-title>Menu</ion-title>
      </ion-toolbar>
    </ion-header>
-
+    <ion-content>
+      <ion-list>
+        <ion-menu-toggle auto-hide ="false" *ngFor="let p of pages">
+          <ion-item [routerLink]="p.url" routerDirection = "root" [class.active-item]="selectedPath">{{p.title}}</ion-item>
+        </ion-menu-toggle>
+      </ion-list>
+    </ion-content>
 
   </ion-menu>
 
