--- a/src/app/pages/signup/signup.page.html
+++ b/src/app/pages/signup/signup.page.html
@@ -9,7 +9,7 @@
 
 <ion-content>
   <ion-card>
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQNmiEzedklNWCr3djkYUtg3dIBlOrFbqmsNjVkz_a1k50FveFR">
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQNmiEzedklNWCr3djkYUtg3dIBlOrFbqmsNjVkz_a1k50FveFR" class = "profile">
     <ion-card-header>
       <ion-card-subtitle>Register as Customer</ion-card-subtitle>
       <ion-card-title>Customer Registration</ion-card-title>
