--- a/src/app/restaurants/restaurants.page.html
+++ b/src/app/restaurants/restaurants.page.html
@@ -25,3 +25,4 @@
     <ion-button expand="block" color = 'success'  (click)="thirdOrder()">View menu</ion-button>
   </ion-card>
 </ion-content>
+<ion-split-pane></ion-split-pane>
