--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,13 +1,12 @@
 <ion-header>
   <ion-toolbar color = 'warning'>
-    <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
-    </ion-buttons>
+    <button  slot="start" icon="menu" (click)="presentActionSheet()"></button>
     <ion-title>home</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
+
   <ion-card>
     <img src = 'assets/images/kfh6.png' alt="kasi logo"/>
   </ion-card>
