--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,3 +1,8 @@
-<p>
-  sidebar works!
-</p>
+
+<ion-content>
+  <ion-buttons>
+    <ion-menu-button>
+      button
+    </ion-menu-button>
+  </ion-buttons>
+</ion-content>
