--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,60 +1,63 @@
 <ion-header>
   <ion-toolbar color = 'warning'>
-    <button  slot="start" icon="menu" (click)="presentActionSheet()"></button>
-    <ion-title>home</ion-title>
+    <ion-icon name="menu" (click)="presentActionSheet()"></ion-icon>
+    <ion-title>home
+    <ion-searchbar></ion-searchbar>
+    </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
 
+
   <ion-card>
-    <img src = 'assets/images/kfh6.png' alt="kasi logo"/>
+    <!--this is the slides you will see on the home page-->
+    <ion-slides pager  >
+
+      <ion-slide >
+        <img src = 'assets/images/kfh6.png' alt="kasi logo"/>
+        <h2>Slide 1</h2>
+      </ion-slide>
+    
+      <ion-slide >
+        <img src = 'assets/images/kfh6.png' alt="kasi logo"/>
+        <h2>Slide 2</h2>
+      </ion-slide>
+    
+      <ion-slide >
+        <img src = 'assets/images/kfh6.png' alt="kasi logo"/>
+        <h2>Slide 3</h2>
+      </ion-slide>
+    
+    </ion-slides>
   </ion-card>
-  <ion-card>
+
+  <!--Restaurants picture with the view button-->
+  <ion-card style="background-color: grey">
     <ion-card-title>Resturants</ion-card-title>
     <img src = 'https://cdn.primedia.co.za/primedia-broadcasting/image/upload/v1488364912/qjwnidvakslcmh6rbp62.jpg' >
     <ion-button expand="block" color = 'success'  (click)="gotoRest()">View all Restaurant</ion-button>
   </ion-card>
   
+
+  <!--Daily Deals ,where you will see the advertisement and also special from the restaurant-->
   <ion-card>
     <ion-card-title>Daily Deals</ion-card-title>
     <ion-slides>
-      <ion-slide>
-        <ion-card>
+      <ion-slide style="background-color: grey">
+        <ion-card >
           <img
             src='https://b.zmtcdn.com/data/menus/848/18370848/30be3612e24e3ecaaaec87fb2165422a.jpg?fit=around%7C200%3A200&crop=200%3A200%3B%2A%2C%2A'>
         </ion-card>
       </ion-slide>
       
-      <ion-slide>
+      <ion-slide style="background-color: grey">
         <ion-card>
           <img src='https://www.findtakeaways.co.za/images/Specials/Chesa_Nyama_Family_Special.JPG'>
         </ion-card>
       </ion-slide>
   
-      <ion-slide>
-        <ion-card>
-          <img src=''>
-        </ion-card>
-      </ion-slide>
- 
-      <ion-slide>
-        <ion-card>
-          <img src=''>
-        </ion-card>
-     
-      </ion-slide>
-      <ion-slide>
-        <ion-card>
-          <img src=''>
-        </ion-card>
-      </ion-slide>
-    
-      <ion-slide>
-        <ion-card>
-          <img src=''>
-        </ion-card>
-      </ion-slide>
+
    
     
   </ion-slides>
