--- a/src/app/pages/menu/menu.page.html
+++ b/src/app/pages/menu/menu.page.html
@@ -1,19 +1,27 @@
 
-  <ion-menu contentId = "content" >
-   <ion-header>
-     <ion-toolbar>
-       <ion-title>Menu</ion-title>
-     </ion-toolbar>
-   </ion-header>
-    <ion-content>
-      <ion-list>
-        <ion-menu-toggle auto-hide ="false" *ngFor="let p of pages">
-          <ion-item [routerLink]="p.url" routerDirection = "root" [class.active-item]="selectedPath">{{p.title}}</ion-item>
-        </ion-menu-toggle>
-      </ion-list>
-    </ion-content>
 
-  </ion-menu>
+<ion-menu [content]="content">
+  <ion-header>
+    <ion-toolbar>
+      <ion-title>Menu</ion-title>
+    </ion-toolbar>
+  </ion-header>
+  <ion-content>
+    <ion-list>
+      <button ion-item (click)="openPage(homePage)">
+        Home
+      </button>
+      <button ion-item (click)="openPage(friendsPage)">
+        Friends
+      </button>
+      <button ion-item (click)="openPage(eventsPage)">
+        Events
+      </button>
+      <button ion-item (click)="closeMenu()">
+        Close Menu
+      </button>
+    </ion-list>
+  </ion-content>
+</ion-menu>
 
-  <ion-router-outlet id="content" main></ion-router-outlet>
-
+<ion-nav id="nav" #content [root]="rootPage"></ion-nav>
