--- a/src/app/pages/signup/signup.page.html
+++ b/src/app/pages/signup/signup.page.html
@@ -1,7 +1,5 @@
 <ion-header>
-  <ion-buttons slot="start">
-    <ion-menu-button></ion-menu-button>
-  </ion-buttons>
+  <ion-icon name="menu" (click)="presentActionSheet()"></ion-icon>
   <ion-toolbar color = 'warning'>
     <ion-title>signup</ion-title>
   </ion-toolbar>
