--- a/src/app/pages/profile/profile.page.html
+++ b/src/app/pages/profile/profile.page.html
@@ -1,5 +1,6 @@
 <ion-header>
   <ion-toolbar>
+    <ion-icon name="menu" (click)="presentActionSheet()"></ion-icon>
     <ion-title>profile</ion-title>
   </ion-toolbar>
 </ion-header>
