--- a/src/app/restaurants/restaurants.page.html
+++ b/src/app/restaurants/restaurants.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar color='warning'>
-    <ion-icon name="menu" (click)="list()"></ion-icon>
+    <!--ion-icon name="menu" (click)="list()"></ion-icon-->
     <ion-title>restaurants</ion-title>
   </ion-toolbar>
 </ion-header>
