--- a/src/app/pages/singupadmin/singupadmin.page.html
+++ b/src/app/pages/singupadmin/singupadmin.page.html
@@ -45,6 +45,6 @@
     <ion-label position="floating">Confirm Password</ion-label>
     <ion-input type = "password"></ion-input>
   </ion-item>
-  <ion-button shape="round" (click)=" goHome()">Register</ion-button>
+  <ion-button shape="round" (click)="navAdmin()">Register</ion-button>
 </ion-card>        
 </ion-content>
