--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -6,7 +6,13 @@
     <ion-title>home</ion-title>
   </ion-toolbar>
 </ion-header>
+<ion-card>
+  <ion-button  expand="block" color ='success'(click)="goApply()">Apply here</ion-button>
+</ion-card>
+<ion-button  expand="block" color = 'success'(click)="reset()">reset password</ion-button>
+<ion-card>
 
+</ion-card>
 <ion-content>
   <ion-card>
     <img src = 'assets/images/kfh6.png' alt="kasi logo"/>
@@ -42,6 +48,7 @@
       <ion-slide>
         <ion-card>
           <img src=''>
+      
         </ion-card>
      
       </ion-slide>
