--- a/src/app/pages/singupcust/singupcust.page.html
+++ b/src/app/pages/singupcust/singupcust.page.html
@@ -46,5 +46,6 @@
     <ion-input></ion-input>
   </ion-item>
   <ion-button shape="round" (click)=" goHome()">Register</ion-button>
+  <ion-button shape = "round" (click)= "btnClear()">Clear</ion-button>
 </ion-card>
 </ion-content>
