--- a/src/app/pages/checkout/checkout.page.html
+++ b/src/app/pages/checkout/checkout.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar color="primary">
+  <ion-toolbar color="warning">
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
@@ -27,7 +27,7 @@
           <h6>Delivery Options</h6>
       </ion-list-header>
         <div class="btn-group btn-group-justified">
-          <a auclick (click)="toggleDisplay()" class="btn btn-primary">Collect</a>
+          <a auclick (click)="toggleDisplay()" class="btn btn-success">Collect</a>
           <a (click)="toggleDisplayNot()" class="btn btn-primary">Deliver</a>
         </div>
     </ion-radio-group>
