--- a/src/app/pages/singupadmin/singupadmin.page.html
+++ b/src/app/pages/singupadmin/singupadmin.page.html
@@ -46,5 +46,6 @@
     <ion-input type = "password"></ion-input>
   </ion-item>
   <ion-button shape="round" (click)="navAdmin()">Register</ion-button>
+  <ion-button shape = "round" (click)= "btnClear()">Clear</ion-button>
 </ion-card>        
 </ion-content>
