--- a/src/app/pages/cart-modal/cart-modal.page.html
+++ b/src/app/pages/cart-modal/cart-modal.page.html
@@ -33,8 +33,9 @@
             </ion-col>
 
             <ion-col size="2" offset="5">
+              
               <ion-button color="medium" fill="clear" (click)="removeCartItem(p)">
-                <ion-icon name="close-circle" slot="icon-only"></ion-icon>
+                <ion-icon name="trash"></ion-icon>
               </ion-button>
             </ion-col>
           </ion-row>
@@ -50,10 +51,8 @@
       </ion-item>
       <ion-item>
         <ion-row>
-          <!--<ion-col size="15">Total</ion-col>-->
-          <ion-col size="3" class="ion-text-end">
-            
-          </ion-col>
+          <ion-col color="tertiary" ><b>Total</b>
+            {{getTotal() | currency:'R'}}</ion-col>
         </ion-row>
       </ion-item>
     </ion-list>
