--- a/src/app/pages/order3/order3.page.html
+++ b/src/app/pages/order3/order3.page.html
@@ -1,4 +1,10 @@
-
+<script src="cordova.js"></script>
+<body>
+ <!--<ion-backdrop
+    [tappable]="true"
+    [visible]="true"
+    [stopPropagation]="showPropagate">
+  ></ion-backdrop>-->
   <ion-header>
     <ion-toolbar color="primary">
       <ion-title>Order</ion-title>
@@ -9,6 +15,9 @@
   </ion-header>
   
   <ion-content>
+
+  
+
     <ion-fab vertical="top" horizontal="end" slot="fixed">
     <ion-fab-button (click)="openCart()" #cart>
       <div class="cart-length">{{cartItemCount | async}}</div>
@@ -35,7 +44,7 @@
        <ion-row>
         <ion-img class="logo" src="assets/images/logo3.png" alt=""></ion-img>
        </ion-row>
-     <ion-card color="" *ngFor="let p of prod">
+     <ion-card data-backdrop="static" (click)="exProduct(p)" (click)="openExtras()" color="" *ngFor="let p of prod">
       <ion-card-header>
         <ion-card-title>{{ p.name}}</ion-card-title>
       </ion-card-header>
@@ -46,12 +55,12 @@
               <b>{{p.price | currency:'R'}}</b>
             </ion-label>
           </ion-col>
-          <ion-col size="4" class="ion-text-right">
+          <!--<ion-col size="4" class="ion-text-right">
             <ion-button (click)="addToCart(p)">add</ion-button>
-          </ion-col>
+          </ion-col>-->
         </ion-row>
       </ion-card-content>
-    </ion-card>
+     </ion-card>
     
     
     <ion-grid>
@@ -78,4 +87,4 @@
     </ion-grid>
   </ion-list>
   </ion-content>
-  
+</body>
