--- a/src/global.scss
+++ b/src/global.scss
@@ -30,3 +30,8 @@
     --border-radius: 10px;
     padding: 25px;
 }
+.extras{
+    --height: 50%;
+    --border-radius: 10px;
+    padding: 25px;
+}
