may cause breaking changes

--- a/src/app/pages/vendor-admin/vendor-admin.page.html
+++ b/src/app/pages/vendor-admin/vendor-admin.page.html
@@ -30,7 +30,7 @@
             <thead>
               <tr>
                 <th scope="col">Order Number</th>
-                <th scope="col">Order Name</th>
+                <th scope="col">Order Description</th>
                 <th scope="col">Order Status</th>
                 <th scope="col">Order Update</th>
               </tr>
