--- a/src/app/pages/vendor-admin/vendor-admin.page.html
+++ b/src/app/pages/vendor-admin/vendor-admin.page.html
@@ -83,15 +83,12 @@
       <ion-list>
         <ion-item href="/profile">Profile</ion-item>
         <ion-item href="/add-menu">Add/ Create Menu</ion-item>
-        <ion-item href="/add-menu">Profile</ion-item>
-        <ion-item>Menu Item</ion-item>
-        <ion-item>Menu Item</ion-item>
       </ion-list>
     </ion-content>
   </ion-menu>
   <ion-router-outlet id="main"></ion-router-outlet>
 
-  <button  (click)="openEnd()" >click</button>
+  <button  (click)="openEnd()" >///</button>
   <div class="ion-padding">
     <ion-card>
       <ion-card-header>
