--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -2,37 +2,33 @@
   <ion-toolbar color = 'warning'>
     <ion-icon name="menu" (click)="presentActionSheet()"></ion-icon>
     <ion-title>home
-<<<<<<< HEAD
-      <ion-searchbar></ion-searchbar>
-=======
-      <ion-searchbar [(ngModel)]="searchTerm" (ionInput)="setFilteredItems()"></ion-searchbar>
->>>>>>> 3bb17a8d3cea78eaf62d7953c785e46462b8799d
+      <ion-searchbar [(ngModel)] = "searchTerm" (ionInput)= "setFilteredItems()"></ion-searchbar>
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
   <ion-list>
-    <ion-item *ngFor="let data of jsonData">
-        {{data.name}}
+    <ion-item *ngFor="let data of searchData">
+        {{data.product_name}}
     </ion-item>
 </ion-list>
-  <ion-card>
+  <ion-card >
     <!--this is the slides you will see on the home page-->
     <ion-slides pager  >
 
       <ion-slide >
-        <img src = 'assets/images/kfh6.png' alt="kasi logo"/>
+        <img src = 'assets/images/kfh6.png' style="width:500px;height:600px;" alt="kasi logo"/>
         <h2>Slide 1</h2>
       </ion-slide>
     
       <ion-slide >
-        <img src = 'assets/images/kfh6.png' alt="kasi logo"/>
+        <img src = 'assets/images/kfh6.png' style="width:500px;height:600px;" alt="kasi logo"/>
         <h2>Slide 2</h2>
       </ion-slide>
     
       <ion-slide >
-        <img src = 'assets/images/kfh6.png' alt="kasi logo"/>
+        <img src = 'assets/images/kfh6.png' style="width:500px;height:600px;" alt="kasi logo"/>
         <h2>Slide 3</h2>
       </ion-slide>
     
@@ -42,7 +38,7 @@
   <!--Restaurants picture with the view button-->
   <ion-card style="background-color: grey">
     <ion-card-title>Resturants</ion-card-title>
-    <img src = 'https://cdn.primedia.co.za/primedia-broadcasting/image/upload/v1488364912/qjwnidvakslcmh6rbp62.jpg' >
+    <img src = 'https://cdn.primedia.co.za/primedia-broadcasting/image/upload/v1488364912/qjwnidvakslcmh6rbp62.jpg' style="width:500px;height:600px;">
     <ion-button expand="block" color = 'success'  (click)="gotoRest()">View all Restaurant</ion-button>
   </ion-card>
 
