--- a/src/app/order/order.page.html
+++ b/src/app/order/order.page.html
@@ -1,12 +1,7 @@
 
   <ion-header>
-<<<<<<< HEAD
   <ion-toolbar color = 'warning'>
-    <ion-icon name="menu" (click)="presentActionSheet()"></ion-icon>
-=======
-  <ion-toolbar color="primary">
-   
->>>>>>> 3bb17a8d3cea78eaf62d7953c785e46462b8799d
+    <!--ion-icon name="menu" (click)="presentActionSheet()"></ion-icon-->
     <ion-title>Order</ion-title>
   </ion-toolbar>
   <script type="module" src="https://cdn.jsdelivr.net/npm/@ionic/core/dist/ionic/ionic.esm.js"></script>
