--- a/src/app/restaurants/restaurants.page.html
+++ b/src/app/restaurants/restaurants.page.html
@@ -8,18 +8,18 @@
 <ion-content>
   <ion-card>
     <ion-card-title>Kasi Food</ion-card-title>
-    <img src = 'assets/images/logo2.jpg'>
+    <img src = 'assets/images/logo2.jpg' style = "width: 100;height: 100;">
     <ion-button expand="block" color = 'success'  (click)="order()">View menu</ion-button>
   </ion-card>
 
   <ion-card>
     <ion-card-title>Nkukhu Box</ion-card-title>
-    <img src = 'assets/images/logo.png'>
+    <img src = 'assets/images/logo.png' style = "width: 100;height: 100;">
     <ion-button expand="block" color = 'success'  (click)="secOrder()">View menu</ion-button>
   </ion-card>
   <ion-card>
     <ion-card-title>Jay's Eatery</ion-card-title>
-    <img src = 'assets/images/logo3.jpg'>
+    <img src = 'assets/images/logo3.jpg' style = "width: 100;height: 100;">
     <ion-button expand="block" color = 'success'  (click)="thirdOrder()">View menu</ion-button>
   </ion-card> 
 </ion-content>
