--- a/src/app/pages/vendor-admin/vendor-admin.page.html
+++ b/src/app/pages/vendor-admin/vendor-admin.page.html
@@ -65,7 +65,14 @@
 
 </ion-content-->
 <ion-header>
-  <ion-toolbar color = "dark">
+  <ion-toolbar color = "dark" >
+    <ion-menu side="start" menuId="custom" contentId="main" class="my-custom-menu">
+      <ion-header>
+        <ion-toolbar color="tertiary">
+          <ion-title>Custom Menu</ion-title>
+        </ion-toolbar>
+      </ion-header>
+    </ion-menu>
     <ion-title>
       Restaurant Admin
     </ion-title>
