--- a/src/app/pages/order-history/order-history.component.html
+++ b/src/app/pages/order-history/order-history.component.html
@@ -7,7 +7,7 @@
     <div class="col-xs-10">
       <div class="row vertical-align">
         <div class="col-xs-4">
-          <!-- <img class="imageClass" [src]="employee.photoPath"/> -->
+          <img class="imageClass" [src]="employee.photoPath"/>
         </div>
 
         <div class="col-xs-8">
