--- a/src/app/pages/extras/extras.page.html
+++ b/src/app/pages/extras/extras.page.html
@@ -1,20 +1,21 @@
 
 <ion-content>
-  <div id="myModal3">
+  <!-- <div bsModal class="modal" tabindex="-1" role="dialog" aria-labelledby="formularioModalLabel" aria-hidden="false" config="{ignoreBackdropClick: true, keyboard: false}"> -->
+    <!-- <div class="modal-dialog modal-lg" role="document"> -->
   
-  <div *ngFor="let p of ext">
-  <div class="ion-text-end">
+  <div class="ion-text-end" *ngFor="let p of ext" >
+  
     <ion-button (click)="close()" (click)="removeExtraItem(p)" fill="clear" color="dark">
       <ion-icon name="close" slot="start"></ion-icon>
     </ion-button>
-  </div>
+  
 
   <ion-item>
     <b>{{p.name}}</b>
   </ion-item>
 
   <ion-list>
-    <ion-radio-group>
+    <ion-radio-group (ionChange)="radioChangeHandler($event)">
       <ion-list-header>
         <ion-label color="">
           Flavours
@@ -23,7 +24,7 @@
 
       <ion-item>
         <ion-label color="medium">Plain</ion-label>
-        <ion-radio value="plain"></ion-radio>
+        <ion-radio checked value="plain"></ion-radio>
       </ion-item>
 
       <ion-item>
@@ -33,49 +34,28 @@
 
       <ion-item>
         <ion-label color="warning">Mild</ion-label>
-        <ion-radio value="mild"></ion-radio>
+        <ion-radio value="Hild"></ion-radio>
       </ion-item>
 
       <ion-item>
-        <ion-label color="orange">Hot</ion-label>
-        <ion-radio value="hot"></ion-radio>
-      </ion-item>
-
-      <ion-item>
-        <ion-label color="danger">Extra Hot</ion-label>
-        <ion-radio value="extra Hot"></ion-radio>
+        <ion-label color="danger">Hot</ion-label>
+        <ion-radio value="Hot"></ion-radio>
       </ion-item>
     </ion-radio-group>
   </ion-list>
+  
   <ion-list>
     <ion-list-header>
-      <ion-label>Sources</ion-label>
+      <ion-label>Sauces</ion-label>
     </ion-list-header>
-    <ion-item>
-      <ion-radio value="Tomato Sauce"></ion-radio>
-      <ion-label>Tomato Sauce</ion-label>
-      <ion-label class="ion-text-right">{{0 | currency:'R'}}</ion-label>
-    </ion-item>
-    <ion-item>
-      <ion-radio></ion-radio>
-      <ion-label>Mustard</ion-label>
-      <ion-label class="ion-text-right">{{0 | currency:'R'}}</ion-label>
-    </ion-item>
-    <ion-item>
-      <ion-radio></ion-radio>
-      <ion-label>Chilli Sauce</ion-label>
-      <ion-label class="ion-text-right">{{0 | currency:'R'}}</ion-label>
-    </ion-item>
-    <ion-item>
-      <ion-radio></ion-radio>
-      <ion-label>Spicy Cheese</ion-label>
-      <ion-label class="ion-text-right">{{0 | currency:'R'}}</ion-label>
+    <ion-item *ngFor="let s of extra">
+      <ion-radio value={{s.name}} (change)="radioChangeHandler($event)"></ion-radio>
+      <ion-label>{{s.name}}</ion-label>
+      <ion-label class="ion-text-right">{{s.price | currency:'R'}}</ion-label>
     </ion-item>
   </ion-list>
 
-  
       <ion-button expand="full" (click)="removeExtraItem(p)" (click)="addToCart(p)" (click)="close()">Add to Cart</ion-button>
  </div>
-</div>
 
 </ion-content>
