--- a/src/app/pages/order3/order3.page.html
+++ b/src/app/pages/order3/order3.page.html
@@ -1,12 +1,8 @@
 <script src="cordova.js"></script>
 <body>
- <!--<ion-backdrop
-    [tappable]="true"
-    [visible]="true"
-    [stopPropagation]="showPropagate">
-  ></ion-backdrop>-->
+ <!--<ion-backdrop data-backdrop="static"></ion-backdrop>-->
   <ion-header>
-    <ion-toolbar color="primary">
+    <ion-toolbar color="warning">
       <ion-title>Order</ion-title>
     </ion-toolbar>
     <script type="module" src="https://cdn.jsdelivr.net/npm/@ionic/core/dist/ionic/ionic.esm.js"></script>
