--- a/src/app/pages/cart-modal/cart-modal.page.html
+++ b/src/app/pages/cart-modal/cart-modal.page.html
@@ -8,8 +8,9 @@
       <ion-icon name="close" slot="start"></ion-icon>
     </ion-button>
   </div>
-
-  
+  <div>
+    {{value}}
+  </div>
 
   <div class="ion-padding">
     <ion-list>
@@ -46,6 +47,9 @@
             <ion-col size="3" class="ion-text-end">
               {{ p.amount * p.price | currency:'R'}}
             </ion-col>
+          </ion-row>
+          <ion-row *ngFor="let e of ext">
+            <ion-label>{{e.name}}</ion-label>
           </ion-row>
         </ion-grid>
       </ion-item>
