--- a/src/app/pages/history/history.page.html
+++ b/src/app/pages/history/history.page.html
@@ -49,7 +49,7 @@
              Price
              </div>
              <div class="col-xs-6">
-               :{{employee.Price}}
+               :{{employee.price}}
              </div>
             </div>
   
