--- a/src/app/pages/history/history.page.scss
+++ b/src/app/pages/history/history.page.scss
@@ -31,6 +31,6 @@ ion-content{
     align-items: center;
 }
 .panel-title{
-    color: #4725a5;
-    background-color: #208a78;
+    color: #ffffff;
+    background-color:rgb(7, 132, 182);
 }
