--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -7,38 +7,40 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content padding class="masters">
   <ion-list>
     <ion-item *ngFor="let data of searchData">
         {{data.product_name}}
     </ion-item>
 </ion-list>
-  <ion-card >
+  <ion-card style="width:600px;height:400px;" class="masters">
     <!--this is the slides you will see on the home page-->
-    <ion-slides pager  >
+    <ion-slides pager  style="width:600px;height:400px;" pager #mySlider class="slides" (ionSlidesDidLoad)="slidesDidLoad(mySlider)">
 
-      <ion-slide >
-        <img src = 'assets/images/kfh6.png' style="width:500px;height:600px;" alt="kasi logo"/>
-        <h2>Slide 1</h2>
+      <ion-slide style="width:600px;height:400px;">
+        <img src = 'assets/images/kfh6.png' style="width:600px;height:400px;" alt="kasi logo"/>
+        
       </ion-slide>
     
-      <ion-slide >
-        <img src = 'assets/images/kfh6.png' style="width:500px;height:600px;" alt="kasi logo"/>
-        <h2>Slide 2</h2>
+      <ion-slide style="width:600px;height:400px;">
+        <img src = 'assets/images/Advertisement/ad2.jpg' style="width:600px;height:400px;" alt="kasi logo"/>
+        
       </ion-slide>
     
-      <ion-slide >
-        <img src = 'assets/images/kfh6.png' style="width:500px;height:600px;" alt="kasi logo"/>
-        <h2>Slide 3</h2>
+      <ion-slide style="width:600px;height:400px;" >
+        <img src = 'assets/images/Advertisement/menatlana.jpg' style="width:600px;height:400px;" alt="kasi logo"/>
+        
       </ion-slide>
     
     </ion-slides>
   </ion-card>
-
+   <div  *ngFor = "let a of adminData">
+       <ion-title>{{a.id}}</ion-title>
+   </div>
   <!--Restaurants picture with the view button-->
-  <ion-card style="background-color: grey">
+  <ion-card class="masters">
     <ion-card-title>Resturants</ion-card-title>
-    <img src = 'https://cdn.primedia.co.za/primedia-broadcasting/image/upload/v1488364912/qjwnidvakslcmh6rbp62.jpg' style="width:500px;height:600px;">
+    <img src = 'https://cdn.primedia.co.za/primedia-broadcasting/image/upload/v1488364912/qjwnidvakslcmh6rbp62.jpg'>
     <ion-button expand="block" color = 'success'  (click)="gotoRest()">View all Restaurant</ion-button>
   </ion-card>
 
@@ -50,19 +52,18 @@
 
 
   <!--Daily Deals ,where you will see the advertisement and also special from the restaurant-->
-  <ion-card>
+  <ion-card style="width:600px;height:400px;" class="masters">
     <ion-card-title>Daily Deals</ion-card-title>
-    <ion-slides >
-      <ion-slide style="background-color: grey">
+    <ion-slides pager #mySlider class="slides" (ionSlidesDidLoad)="slidesDidLoad(mySlider)">
+      <ion-slide style="background-color: grey" style="width:600px;height:400px;" >
         <ion-card >
-          <img
-            src='https://b.zmtcdn.com/data/menus/848/18370848/30be3612e24e3ecaaaec87fb2165422a.jpg?fit=around%7C200%3A200&crop=200%3A200%3B%2A%2C%2A'>
+          <img src='https://specsonline.com/wp-content/uploads/2019/01/Mobile-Deli-Page-Slider-600x200.jpg' style="width:600px;height:400px;">
         </ion-card>
       </ion-slide>
       
-      <ion-slide style="background-color: grey">
+      <ion-slide style="background-color: grey" style="width:600px;height:400px;">
         <ion-card>
-          <img src='https://www.findtakeaways.co.za/images/Specials/Chesa_Nyama_Family_Special.JPG'>
+          <img src='https://www.findtakeaways.co.za/images/Specials/Chesa_Nyama_Family_Special.JPG' style="width:600px;height:400px;">
         </ion-card>
       </ion-slide>
   
