--- a/src/app/restaurants/restaurants.page.html
+++ b/src/app/restaurants/restaurants.page.html
@@ -1,6 +1,7 @@
 <ion-header>
   <ion-toolbar color='warning'>
     <!--ion-icon name="menu" (click)="list()"></ion-icon-->
+    <a class="ion-btn btn" (click)="backButton()">back</a>
     <ion-title>restaurants</ion-title>
   </ion-toolbar>
 </ion-header>
@@ -19,11 +20,7 @@
   </ion-card>
   <ion-card>
     <ion-card-title>Jay's Eatery</ion-card-title>
-<<<<<<< HEAD
     <img src = 'assets/images/logo3.jpg' style = "width: 100;height: 100;">
-=======
-    <img src = 'assets/images/logo4.jpeg'>
->>>>>>> 81b1bbf93a29358c1ae4da31f95bf6e91a4b793d
     <ion-button expand="block" color = 'success'  (click)="thirdOrder()">View menu</ion-button>
   </ion-card> 
 </ion-content>
