--- a/src/app/pages/singupcust/singupcust.page.html
+++ b/src/app/pages/singupcust/singupcust.page.html
@@ -1,9 +1,8 @@
 <ion-header>
   <ion-toolbar color = 'warning'>
     <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title>singupcust</ion-title>
+    <ion-title>Customer</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -18,24 +17,8 @@
     <ion-input></ion-input>
   </ion-item>
   <ion-item>
-    <ion-label position="floating">Id Number</ion-label>
-    <ion-input></ion-input>
-  </ion-item>
-  <ion-item>
     <ion-label position="floating">Cellphone number</ion-label>
     <ion-input></ion-input>
-  </ion-item>
-  <ion-item>
-    <ion-label position="floating">email Address</ion-label>
-    <ion-input></ion-input>
-    <ion-item>
-      <ion-label position="stacked">Address</ion-label>
-      <ion-input placeholder="Address Line 1"></ion-input>
-      <ion-input placeholder="Address Line 2"></ion-input>
-      <ion-input placeholder="City"></ion-input>
-      <ion-input placeholder="State"></ion-input>
-      <ion-input placeholder="Zip Code"></ion-input>
-    </ion-item>
   </ion-item>
   <ion-item>
     <ion-label position="floating">Password</ion-label>
@@ -45,7 +28,7 @@
     <ion-label position="floating">Confirm Password</ion-label>
     <ion-input></ion-input>
   </ion-item>
-  <ion-button shape="round" (click)=" goHome()">Register</ion-button>
-  <ion-button shape = "round" (click)= "btnClear()">Clear</ion-button>
+  <ion-button shape="round" (click)="goHome()">Register</ion-button>
+  <ion-button shape = "round" (click)= "backButton()">Cancel</ion-button>
 </ion-card>
 </ion-content>
