--- a/src/app/pages/custprof/custprof.page.html
+++ b/src/app/pages/custprof/custprof.page.html
@@ -1,7 +1,7 @@
 <ion-header>
-  <ion-toolbar color="warning">
-    <ion-icon name="arrow-back" (click)="back()" ></ion-icon>
-    <ion-title>signin</ion-title>
+  <ion-toolbar color= 'warning'>
+    <ion-icon name= "arrow-back" (click)="back()"></ion-icon>
+    <ion-title>My Profile</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -18,16 +18,15 @@
       <h3 class="playername">Welcome</h3>
       <h5 class="country">kasi food hub</h5>
       <ion-item>
-        <ion-label position="floating" class="country">email/username</ion-label>
+        <ion-label position="floating">Floating Label</ion-label>
         <ion-input></ion-input>
       </ion-item>
       <ion-item>
-        <ion-label position="floating" class="country">password</ion-label>
+        <ion-label position="floating">Floating Label</ion-label>
         <ion-input></ion-input>
       </ion-item>
     </div>
   
-    <ion-button expand="full" type='submit' color="success">Log in</ion-button>
+    <ion-button expand="full" color="success">View profile at ATP</ion-button>
   </div>
 </ion-content>
-
