--- a/src/app/pages/order3/order3.page.html
+++ b/src/app/pages/order3/order3.page.html
@@ -5,7 +5,7 @@
 
     <ion-toolbar color="warning">
 
-      <ion-icon name="menu" (click)="presentActionSheet()"></ion-icon>
+      <ion-icon name="arrow-back" (click)="backButton()"></ion-icon>
 
       <ion-title>Order</ion-title>
     </ion-toolbar>
