--- a/src/app/pages/order2/order2.page.html
+++ b/src/app/pages/order2/order2.page.html
@@ -2,7 +2,7 @@
   <ion-header>
 
     <ion-toolbar color="primary">
-      <ion-icon name="menu"></ion-icon>
+      <ion-icon name="arrow-black" (click)="backButton()"></ion-icon>
       <ion-title>Order</ion-title>
     </ion-toolbar>
     <script type="module" src="https://cdn.jsdelivr.net/npm/@ionic/core/dist/ionic/ionic.esm.js"></script>
