--- a/src/app/pages/checkout/checkout.page.html
+++ b/src/app/pages/checkout/checkout.page.html
@@ -1,8 +1,7 @@
 <ion-header>
   <ion-toolbar color="warning">
-    <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
-    </ion-buttons>
+
+     <ion-icon name = "arrow-back" (click)="back()"></ion-icon>
     <ion-title>Make Payment</ion-title>
   </ion-toolbar>
 </ion-header>
