--- a/src/app/pages/order2/order2.page.html
+++ b/src/app/pages/order2/order2.page.html
@@ -1,7 +1,7 @@
 
   <ion-header>
 
-    <ion-toolbar color="primary">
+    <ion-toolbar color="warning">
       <ion-icon name="arrow-black" (click)="backButton()"></ion-icon>
       <ion-title>Order</ion-title>
     </ion-toolbar>
