--- a/src/app/order/order.page.html
+++ b/src/app/order/order.page.html
@@ -1,7 +1,7 @@
 
   <ion-header>
   <ion-toolbar color = 'warning'>
-    <ion-icon name="menu" (click)="backButton()"></ion-icon>
+    <ion-icon name="arrow-back" (click)="backButton()"></ion-icon>
     <ion-title>Order</ion-title>
   </ion-toolbar>
   <script type="module" src="https://cdn.jsdelivr.net/npm/@ionic/core/dist/ionic/ionic.esm.js"></script>
