--- a/src/app/order/order.page.html
+++ b/src/app/order/order.page.html
@@ -35,7 +35,7 @@
      <ion-row>
       <ion-img class="logo" src="assets/images/logo.png" alt=""></ion-img>
      </ion-row>
-   <ion-card  color="light" *ngFor="let p of products">
+   <ion-card  color="light" *ngFor="let p of products" (click)="exProduct(p)" (click)="openExtras()">
     <ion-card-header>
       <ion-card-title>{{ p.name}}</ion-card-title>
     </ion-card-header>
@@ -46,9 +46,7 @@
             <b>{{p.price | currency:'R'}}</b>
           </ion-label>
         </ion-col>
-        <ion-col size="4" class="ion-text-right">
-          <ion-button (click)="addToCart(p)">add</ion-button>
-        </ion-col>
+       
       </ion-row>
     </ion-card-content>
   </ion-card>
