--- a/src/app/pages/order2/order2.page.html
+++ b/src/app/pages/order2/order2.page.html
@@ -36,7 +36,7 @@
        <ion-row>
         <ion-img class="logo" src="assets/images/logo2.png" alt=""></ion-img>
        </ion-row>
-     <ion-card *ngFor="let p of product">
+     <ion-card *ngFor="let p of product" (click)="exProduct(p)" (click)="openExtras()">
       <ion-card-header>
         <ion-card-title>{{ p.name}}</ion-card-title>
       </ion-card-header>
@@ -47,9 +47,7 @@
               <b>{{p.price | currency:'R'}}</b>
             </ion-label>
           </ion-col>
-          <ion-col size="4" class="ion-text-right">
-            <ion-button (click)="addToCart(p)">add</ion-button>
-          </ion-col>
+          
         </ion-row>
       </ion-card-content>
     </ion-card>
