--- a/src/global.scss
+++ b/src/global.scss
@@ -35,3 +35,18 @@
     --border-radius: 10px;
     padding: 25px;
 }
+.profile{
+    --height: 70%;
+    --border-radius: 10px;
+    padding: 25px;
+}
+.menu{
+    --height: 70%;
+    --border-radius: 10px;
+    padding: 25px;
+}
+.overview{
+    --height: 70%;
+    --border-radius: 10px;
+    padding: 25px;
+}
