--- a/src/app/pages/history/history.page.html
+++ b/src/app/pages/history/history.page.html
@@ -19,44 +19,44 @@
     </div>
   
     <div class="panel-body">
-      <div class="col-xs-10">
-        <div class="row vertical-align">
-          <div class="col-xs-4">
+      <ion-col class="col-xs-10">
+        <ion-row class="row vertical-align">
+          <ion-col class="col-xs-4">
              <img class="imageClass" [src]="employee.photoPath"/> 
-          </div>
+          </ion-col>
   
           <div class="col-xs-8">
-            <div class="row">
-             <div class="col-xs-6">
+            <ion-row class="row">
+             <ion-col class="col-xs-6">
                Shop Name
-             </div>
-             <div class="col-xs-6">
+             </ion-col>
+             <ion-col class="col-xs-6">
                :{{employee.shopName}}
-             </div>
-            </div>
+             </ion-col>
+            </ion-row>
   
-            <div class="row">
-             <div class="col-xs-6">
+            <ion-row class="row">
+             <ion-col class="col-xs-6">
                Address
-             </div>
-             <div class="col-xs-6">
+             </ion-col>
+             <ion-col class="col-xs-6">
                :{{employee.address}}
-             </div>
-            </div>
+             </ion-col>
+            </ion-row>
   
-            <div class="row">
-             <div class="col-xs-6">
+            <ion-row class="row">
+             <ion-col class="col-xs-6">
              Price
-             </div>
-             <div class="col-xs-6">
+             </ion-col>
+             <ion-col class="col-xs-6">
                :{{employee.price}}
-             </div>
-            </div>
+             </ion-col>
+            </ion-row>
   
             <ion-button (click)="addToCart(employee)" >Order</ion-button>
           </div>
-        </div>
-      </div>
+        </ion-row>
+      </ion-col>
     </div>
   </div> 
 </ion-card>
