--- a/src/app/pages/signin/signin.page.html
+++ b/src/app/pages/signin/signin.page.html
@@ -27,7 +27,7 @@
       </ion-item>
     </div>
   
-    <ion-button expand="full" type='submit' color="success">Log in</ion-button>
+    <ion-button expand="full" type='submit' color="success" (click)="gotoProfile();">Log in</ion-button>
   </div>
 </ion-content>
 
