--- a/src/app/pages/signin/signin.page.scss
+++ b/src/app/pages/signin/signin.page.scss
@@ -26,7 +26,7 @@ ion-content {
                  border-radius: 50%;
                  position: absolute;
                  bottom: calc(-1*(80px + 4px));
-                 border: 8px solid orange;
+                 border: 8px solid blue;
                  background-color: #fff;
              }
          }
