--- a/src/app/pages/history/history.page.html
+++ b/src/app/pages/history/history.page.html
@@ -53,7 +53,7 @@
              </ion-col>
             </ion-row>
   
-            <ion-button (click)="addToCart(employee)" >Order</ion-button>
+            <ion-button (click)="addToCart(employee)" >ADD</ion-button>
           </div>
         </ion-row>
       </ion-col >
