--- a/src/app/pages/vendor-admin/vendor-admin.page.html
+++ b/src/app/pages/vendor-admin/vendor-admin.page.html
@@ -66,16 +66,13 @@
 </ion-content-->
 <ion-header>
   <ion-toolbar color = "dark" >
-    <ion-menu side="start" menuId="custom" contentId="main" class="my-custom-menu">
-      <ion-header>
-        <ion-toolbar color="tertiary">
-          <ion-title>Custom Menu</ion-title>
-        </ion-toolbar>
-      </ion-header>
-    </ion-menu> <ion-icon name="menu"></ion-icon>
     <ion-title>
       Restaurant Admin
     </ion-title>
+    <ion-buttons slot="start">
+      <ion-menu-button autoHide="false"></ion-menu-button>
+      
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
@@ -85,7 +82,7 @@
 
   <ion-router-outlet id="main"></ion-router-outlet>
 
-  <ion-menu side="start" menuId="first" contentId="main">
+  <!-- <ion-menu side="start" menuId="first" contentId="main">
     <ion-header>
       <ion-toolbar color="dark">
         <ion-title>Menu</ion-title>
@@ -98,7 +95,7 @@
       </ion-list>
     </ion-content>
   </ion-menu>
-  <ion-router-outlet id="main"></ion-router-outlet>
+  <ion-router-outlet id="main"></ion-router-outlet> -->
 
   <button  (click)="openEnd()" >///</button>
 
