--- a/src/app/pages/singupadmin/singupadmin.page.html
+++ b/src/app/pages/singupadmin/singupadmin.page.html
@@ -5,7 +5,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content fullscreen>
+<ion-content >
   <div class="card">
     <div class="header">
       <div class="avatar">
@@ -60,7 +60,7 @@
     </div>
     <ion-button shape="round" (click)="goHome()">Register</ion-button>
     <ion-button shape = "round" (click)= "backButton()">Cancel</ion-button>
-   
+  
   </div>
-          
+  
 </ion-content>
