vendor charts update

--- a/src/app/pages/vendor-admin/vendor-admin.page.html
+++ b/src/app/pages/vendor-admin/vendor-admin.page.html
@@ -111,7 +111,7 @@
 
     <ion-card>
       <ion-card-header>
-        Doughnut Chart
+        Head to Head comparisons
       </ion-card-header>
       <ion-card-content>
         <canvas #doughnutCanvas></canvas>
@@ -120,7 +120,7 @@
 
     <ion-card>
       <ion-card-header>
-        Line Chart
+        Yearly Financial Performance
       </ion-card-header>
       <ion-card-content>
         <canvas #lineCanvas></canvas>
