--- a/src/app/pages/vendor-admin/vendor-admin.page.html
+++ b/src/app/pages/vendor-admin/vendor-admin.page.html
@@ -97,10 +97,10 @@
   </ion-menu>
   <ion-router-outlet id="main"></ion-router-outlet> -->
 
-  <button  (click)="openEnd()" >///</button>
+
 
   <div class="ion-padding">
-    <ion-card>
+    <ion-card color = "dark">
       <ion-card-header>
         Menu Item Demands per month
       </ion-card-header>
@@ -109,7 +109,7 @@
       </ion-card-content>
     </ion-card>
 
-    <ion-card>
+    <ion-card color = "dark">
       <ion-card-header>
         Head to Head comparisons
       </ion-card-header>
@@ -118,7 +118,7 @@
       </ion-card-content>
     </ion-card>
 
-    <ion-card>
+    <ion-card color = "dark">
       <ion-card-header>
         Yearly Financial Performance
       </ion-card-header>
