charts modified reverted

--- a/src/app/pages/vendor-admin/vendor-admin.page.html
+++ b/src/app/pages/vendor-admin/vendor-admin.page.html
@@ -100,7 +100,7 @@
 
 
   <div class="ion-padding">
-    <ion-card color = "dark">
+    <ion-card color = "light">
       <ion-card-header>
         Menu Item Demands per month
       </ion-card-header>
@@ -109,7 +109,7 @@
       </ion-card-content>
     </ion-card>
 
-    <ion-card color = "dark">
+    <ion-card color = "light">
       <ion-card-header>
         Head to Head comparisons
       </ion-card-header>
@@ -118,9 +118,9 @@
       </ion-card-content>
     </ion-card>
 
-    <ion-card color = "dark">
+    <ion-card color = "light">
       <ion-card-header>
-        Yearly Financial Performance
+        Monthly Financial Performance
       </ion-card-header>
       <ion-card-content>
         <canvas #lineCanvas></canvas>
