--- a/src/app/pages/cart-modal/cart-modal.page.html
+++ b/src/app/pages/cart-modal/cart-modal.page.html
@@ -10,9 +10,9 @@
   <div>
     {{value}}
   </div>
-
   <div class="ion-padding">
     <ion-list>
+      <ion-card>
       <ion-item *ngFor="let p of cart" class="ion-text-wrap">
         <ion-grid>
           <ion-row class="ion-align-items-center">
@@ -52,6 +52,7 @@
           </ion-row>
         </ion-grid>
       </ion-item>
+    </ion-card>
       <ion-item>
         <ion-row>
           <ion-col color="tertiary" ><b>Total</b>
