--- a/src/app/pages/order3/order3.page.html
+++ b/src/app/pages/order3/order3.page.html
@@ -1,20 +1,19 @@
 <script src="cordova.js"></script>
+<script>
+  //.controller('')
+</script>
 <body>
- <!--<ion-backdrop data-backdrop="static"></ion-backdrop>-->
+  
   <ion-header>
 
     <ion-toolbar color="warning">
 
-
-<<<<<<< HEAD
-=======
       <!-- <ion-icon name="menu" (click)="presentActionSheet()"></ion-icon> -->
 <!-- >>>>>>> 83fdc24b6241fe28dcbe71e2e921cbf5b3b33c0c -->
 
 
       <ion-icon name="arrow-back" (click)="backButton()"></ion-icon>
 
->>>>>>> a3d6e2fca4b55626cc0020150470910a4374dc2a
 
       <ion-title>Order</ion-title>
     </ion-toolbar>
@@ -23,9 +22,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@ionic/core/css/ionic.bundle.css"/>
   </ion-header>
   
-  <ion-content ng-controller="ComponentesJSCtrl as cc">
+  <ion-content padding>
 
-  
 
     <ion-fab vertical="top" horizontal="end" slot="fixed">
     <ion-fab-button (click)="openCart()" #cart>
@@ -54,15 +52,15 @@
         <ion-img class="logo" src="assets/images/logo3.png" alt=""></ion-img>
        </ion-row>
 
-     <ion-card ng-click="cc.onShowBack" (click)="exProduct(p)" (click)="openExtras()" color="" *ngFor="let p of prod">
+     <ion-card (click)="exProduct(p)" (click)="openExtras()" *ngFor="let p of menuList">
       <ion-card-header>
-        <ion-card-title>{{ p.name}}</ion-card-title>
+        <ion-card-title>{{p.item_name}}</ion-card-title>
       </ion-card-header>
       <ion-card-content>
         <ion-row class="ion-align-items-center">
           <ion-col size="8">
             <ion-label color="secondary">
-              <b>{{p.price | currency:'R'}}</b>
+              <b>{{p.item_price | currency:'R'}}</b>
             </ion-label>
           </ion-col>
           <!--<ion-col size="4" class="ion-text-right">
