--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -19,7 +19,7 @@
 <ion-content padding class="content-color">
   <ion-list>
     <ion-item *ngFor="let data of jsonData">
-        {{data.name}}
+        {{data.item_name}}
     </ion-item>
    </ion-list>
 
